fixed overflow

--- a/pStyle.css
+++ b/pStyle.css
@@ -126,7 +126,7 @@ html{
     .pic{
         left:0;
         bottom:0;
-        opacity:0.6;
+        opacity:0.7;
     }
     .header .toggle{
         position:fixed;
@@ -398,14 +398,14 @@ html{
 
 @media (max-width: 768px) {
     #Contact::before{
-        width: 200px; 
-        height:200px;
-        transform: translate(-150px,-240px);
+        width: 150px; 
+        height:150px;
+        transform: translate(-130px,-280px);
     }
     #Contact::after{
-        width: 200px; 
-        height:200px;
-        transform: translate(150px,240px);
+        width: 150px; 
+        height:150px;
+        transform: translate(130px,280px);
     }
     .containerCon{
         padding: 20px;
@@ -422,7 +422,7 @@ html{
     z-index:-1;
     bottom: 0;
     width: 100%;
-    height: 300px;
+    height: 200px;
     margin: 0 auto;
     background: #262626;
     border-top-left-radius: 40px;
@@ -466,7 +466,7 @@ html{
     content:'\f0e1';
     color: #2196f3;
     border-bottom: 3px solid #2196f3;
-    padding-bottom: 1px;
+    padding-bottom: -2px;
     pointer-events: none;
 }
 .sociallogo li:nth-child(2):before{
